fixing cardsa gaps

--- a/blackanddeath.UI/src/app/features/albums/card/album-card.scss
+++ b/blackanddeath.UI/src/app/features/albums/card/album-card.scss
@@ -1,7 +1,6 @@
 :host {
   display: block;
   min-width: 0;
-  border-right: 1px solid var(--color-card-separator);
 }
 
 
@@ -12,9 +11,7 @@
   cursor: pointer;
 
   &__cover {
-    position: relative;
     width: 100%;
-    aspect-ratio: 1;
     overflow: hidden;
   }
 
@@ -23,7 +20,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    aspect-ratio: 1;
 
     &-vinyl {
       width: min(171px, 60%);
@@ -33,10 +30,8 @@
   }
 
   &__image {
-    position: absolute;
-    inset: 0;
     width: 100%;
-    height: 100%;
+    aspect-ratio: 1;
     object-fit: cover;
     display: block;
   }
