--- a/blackanddeath.UI/src/app/features/home/home.scss
+++ b/blackanddeath.UI/src/app/features/home/home.scss
@@ -25,51 +25,3 @@ app-section:nth-of-type(5) {
   }
 }
 
-// 4 cols: last in each row = every 4th
-app-album-card:nth-child(4n),
-app-album-card:last-child {
-  border-right: none;
-}
-
-// 2 cols: restore 4th, remove every 2nd
-@media (max-width: 56.25rem) {
-  app-album-card:nth-child(4n) {
-    border-right: 1px solid var(--color-card-separator);
-  }
-
-  app-album-card:nth-child(2n) {
-    border-right: none;
-  }
-}
-
-// 1 col: no borders
-@media (max-width: 28.125rem) {
-  app-album-card:nth-child(n) {
-    border-right: none;
-  }
-}
-
-// 3 cols: last in each row = every 3rd
-app-band-card:nth-child(3n),
-app-band-card:last-child {
-  border-right: none;
-}
-
-// 2 cols: restore 3rd, remove every 2nd and last-child
-@media (max-width: 56.25rem) {
-  app-band-card:nth-child(3n) {
-    border-right: 1px solid var(--color-card-separator);
-  }
-
-  app-band-card:nth-child(2n),
-  app-band-card:last-child {
-    border-right: none;
-  }
-}
-
-// 1 col: no borders
-@media (max-width: 28.125rem) {
-  app-band-card:nth-child(n) {
-    border-right: none;
-  }
-}
